# SiteViewer

./: .gitignore
_cmake/: application_settings.cmake  applyConfiguration.cmake  common.cmake  config.h.in  lib_settings.cmake  mod_settings.cmake  paths.cmake  setup.cmake  version.cmake
_include/: config.hpp.in
sources/: CMakeLists.txt  exampleLib.cpp  exampleLib.hpp  logger.cpp  logger.h  main.cpp
sources/tgBot/: tgbot.cpp  tgbot.h
